--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+/.idea/assetWizardSettings.xmlg
 .DS_Store
 /build
 /captures
